tests/snapshots/corpus__高知大学学生懲戒規則@高知大学学生懲戒規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学学生懲戒規則.pdf
---
{
  "title": "高知大学学生懲戒規則",
  "enacted": "平成27年３月25日 規  則  第 159 号",
  "last_amended": "最終改正令和４年３月 28 日規則第 100 号 高知大学学生懲戒規則（平成 16 年規則第 144 号）の全部を改正する。",
  "body": [
    {
      "type": "article",
      "number": {
        "article": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学学則（以下「学則」という。）第 20 条第４項の規定に基づき、学生の懲戒に関し必要な事項を定める。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 2,
        "branch": null
      },
      "title": "定義",
      "paragraphs": [
        {
          "number": 1,
          "text": "学則第 20 条第２項に規定する懲戒は、次の各号のとおりとする。",
          "items": [
            {
              "number": 1,
              "text": "退学  高知大学（以下「本学」という。）における修学の権利を剥奪し、学籍関係を一方的に終了させること。"
            },
            {
              "number": 2,
              "text": "停学  一定の期間、学生の教育課程の履修及び課外活動を禁止すること。"
            },
            {
              "number": 3,
              "text": "訓告  学生の行った非違行為を戒めて事後の反省を求め、将来にわたってそのようなことのないよう、文書により注意すること。"
            }
          ]
        },
        {
          "number": 2,
          "text": "停学の期間は、無期又は有期とし、無期の停学とは、期限を付さずに命じる停学をいい、有期の停学とは、６か月以内の期限を付して命じる停学をいう。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 3,
        "branch": null
      },
      "title": "その他の教育的措置",
      "paragraphs": [
        {
          "number": 1,
          "text": "前条に定めるもののほか、非違行為を行った学生に対し、当該学生の所属する学部、研究科又は土佐さきがけプログラム（以下「学部等」という。）の教授会、研究科委員会又は土佐さきがけプログラム運営委員会（以下「教授会等」という。）が必要と認めたときは、学部長、研究科長又は土佐さきがけプログラム運営委員会委員長（以下「学部長等」という。）が厳重注意を行うことができる。",
          "items": []
        },
        {
          "number": 2,
          "text": "厳重注意は、訓告に至らないものであって、当該非違行為を厳重に注意することをいう。",
          "items": []
        },
        {
          "number": 3,
          "text": "厳重注意は、口頭又は文書により行うものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 4,
        "branch": null
      },
      "title": "懲戒の基準",
      "paragraphs": [
        {
          "number": 1,
          "text": "懲戒の基準は、次の各号のとおりとし、標準例は、別表に定めるところによる。",
          "items": [
            {
              "number": 1,
              "text": "退学は、以下のいずれかに該当する行為を行った者に行う。ア  本学の秩序を乱し、本学の教育研究・社会貢献活動を妨げる行為で、特に悪質と判断された場合イ  学内または学外での学生の本分に反した重大な非違行為で、特に悪質と判断された場合ウ  本学の規則等又は命令に違反する行為で、特に悪質と判断された場合"
            },
            {
              "number": 2,
              "text": "停学は、以下のいずれかに該当する行為を行った者に行う。ア  本学の秩序を乱し、本学の教育研究・社会貢献活動を妨げる行為で、悪質と判断された場合イ  学内または学外での学生の本分に反した重大な非違行為ウ  本学の規則等又は命令に違反する行為で、悪質と判断された場合"
            },
            {
              "number": 3,
              "text": "訓告は、以下のいずれかに該当する行為を行った者に行う。ア  学内または学外での学生の本分に反した非違行為イ  本学の規則等又は命令に違反する行為"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 5,
        "branch": null
      },
      "title": "情状の酌量",
      "paragraphs": [
        {
          "number": 1,
          "text": "前条において、行為の悪質性は、当該学生の主観的態様、当該非違行為の性質、当該非違行為に至る動機、非違行為歴等を勘案の上判断するものとする。",
          "items": []
        },
        {
          "number": 2,
          "text": "前条において、行為の重大性は、当該非違行為により被害を受けた者の精神的苦痛を含めた身体的被害の程度、物的被害の程度、当該非違行為が社会に及ぼした影響等を勘案の上判断するものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "前２項に定めるもののほか、懲戒を行うに当たっては、当該学生の平素の行状、当該行為の他への影響、懲戒を行うことによって生じる訓戒的効果等を総合的に考慮して行うものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 6,
        "branch": null
      },
      "title": "事実調査",
      "paragraphs": [
        {
          "number": 1,
          "text": "学部長等は、学生に懲戒の対象となる行為（以下「非違行為等」という。）があったと推測されるときは、その行為の事実調査を行わせるとともに、学長へ報告するものとする。",
          "items": []
        },
        {
          "number": 2,
          "text": "事実調査は、学部等の学生の懲戒を所掌する委員会（以下「委員会」という。）において行うものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "委員会が必要と認めたときは、委員会に委員以外の者の出席を求め、その意見を聴くことができる。",
          "items": []
        },
        {
          "number": 4,
          "text": "委員会は、事実調査を行うに当たっては、当該学生にその旨を通知し、弁明の機会を与えなければならない。ただし、当該学生が刑法上の身柄拘束等によって調査の時点で弁明の機会を与えられない場合は、懲戒が妥当であると判断される場合に限り、これによらないことができる。なお、学生が、正当な理由がなく弁明を行わない場合は、この権利を放棄したものとみなす。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 7,
        "branch": null
      },
      "title": "審議・申請",
      "paragraphs": [
        {
          "number": 1,
          "text": "学部長等は、前条に規定する事実調査の結果、学生を懲戒する必要があると認めるときは、委員会において懲戒の要否及び懲戒の種類等を明記した懲戒案を作成し、教授会等へ付議するものとする。",
          "items": []
        },
        {
          "number": 2,
          "text": "同一の事由の非違行為等が、複数の学部等に所属する学生によって行われたときは、事実調査並びに審議に際しての懲戒の要否、懲戒の種類及び程度について相互に連絡し、調整するものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "学部長等は、退学、停学又は訓告の懲戒案が教授会等において決定した場合には、学長に対して懲戒の上申を行う。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 8,
        "branch": null
      },
      "title": "決定",
      "paragraphs": [
        {
          "number": 1,
          "text": "学長は、前条の上申を受け、懲戒の必要があると認めたときは、これを懲戒する。",
          "items": []
        },
        {
          "number": 2,
          "text": "前項の懲戒の内容が、退学若しくは無期の停学の場合、又は複数の学部等に所属する学生に関わる場合には、国立大学法人高知大学教育研究評議会の審議を経て行うものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "学部長等は、前条の審議において厳重注意を行うものと決したときは、学長に報告し、これを行う。ただし、学長は、報告された内容が懲戒に値すると判断したときは、学部長等に再審査を命ずるものとする。",
          "items": []
        },
        {
          "number": 4,
          "text": "学長は、懲戒を決定したときは、文書によって当該学生に通知するとともに、対象となった事実の概要及び懲戒内容を掲示によって学内に告示する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 9,
        "branch": null
      },
      "title": "謹慎",
      "paragraphs": [
        {
          "number": 1,
          "text": "学長は、諸般の状況から当該事案が退学又は停学の処分に該当する行為であると考えられる場合には、懲戒が決定されるまでの間、当該学生に対し、謹慎を命ずることができる。",
          "items": []
        },
        {
          "number": 2,
          "text": "懲戒の内容が停学の場合には、前項の謹慎期間を、停学期間に算入することができる。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 10,
        "branch": null
      },
      "title": "不服申立て",
      "paragraphs": [
        {
          "number": 1,
          "text": "懲戒の通知を受けた学生は、事実誤認、新事実の発見、その他正当な理由がある場合は、学長に対して不服申立てを行うことができる。",
          "items": []
        },
        {
          "number": 2,
          "text": "学長は、前項の不服申立てを受理した場合には、速やかに再審査の可否を決定する。",
          "items": []
        },
        {
          "number": 3,
          "text": "学長は、再審査の必要があると認めた場合には、懲戒の上申を行った学部長等に対して再審査を命ずるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 11,
        "branch": null
      },
      "title": "停学中の指導",
      "paragraphs": [
        {
          "number": 1,
          "text": "停学処分を行った学部等は、停学中の当該学生に対し、定期的な連絡・面談等の適切な指導を行うものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 12,
        "branch": null
      },
      "title": "停学の解除及び停学期間の短縮",
      "paragraphs": [
        {
          "number": 1,
          "text": "学長は、停学処分を受けた学生について、当該学生の反省の度合い等を勘案の上、教授会等の議を経て、無期の停学の解除又は有期の停学の期間を短縮することができる。",
          "items": []
        },
        {
          "number": 2,
          "text": "無期の停学の解除の時期は、当該停学の開始の日から起算して６か月以内とすることはできない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 13,
        "branch": null
      },
      "title": "身分の異動",
      "paragraphs": [
        {
          "number": 1,
          "text": "学長は、非違行為等が判明してから懲戒を行うまでの間に、当該学生から学則第",
          "items": []
        },
        {
          "number": 13,
          "text": "条に規定する退学（以下「自主退学」という。）の願い出があったときは、これを受理しないことができる。懲戒の種類を退学以外とした場合には、自主退学の願い出を受理するものとする。",
          "items": []
        },
        {
          "number": 2,
          "text": "学長は、非違行為等が判明してから懲戒を行うまでの間に、当該学生から休学の願い出があったときは、これを受理する。ただし、懲戒の種類を退学又は停学とした場合には、学長は、休学の許可を取り消し、懲戒を行う。",
          "items": []
        },
        {
          "number": 3,
          "text": "学長は、非違行為等が判明してから懲戒を行うまでの間に、当該学生に学則第 16 条に規定する除籍となる事由が発生した場合には、除籍処分を保留する。懲戒の種類を退学とした場合には、除籍となる日をもって退学の懲戒を行い、懲戒の種類を退学以外とした場合には、除籍となる日をもって当該懲戒を行うと同時に除籍する。ただし、除籍事由が死亡の場合には、当該事由により死亡の日をもって除籍し、懲戒手続を中止する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 14,
        "branch": null
      },
      "title": "記録",
      "paragraphs": [
        {
          "number": 1,
          "text": "懲戒を行った場合は、当該学生の学籍簿にその内容を記録するものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 15,
        "branch": null
      },
      "title": "雑則",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、必要な事項は別に定める。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "raw_text": "１  この規則は、平成 27 年４月１日から施行する。\n２  平成 20 年４月１日施行の学則附則第２項の規定により存続されている学則等に定め\nる懲戒に関し別に定めるとする規則は、本規則とする。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則（令和４年３月 28 日規則第 100 号）",
      "raw_text": "この規則は、令和４年４月１日から施行する。\n別表（第４条関係）\n懲  戒  の  標  準  例\n区分  非違行為等  懲戒の標準例\n刑罰法規\nに抵触す\nる行為\n殺人、強盗、強姦\nかん、誘拐、放火等の凶悪な犯罪行為又は犯\n罪未遂行為  退学\n暴行、傷害、万引きその他の窃盗、横領、恐喝又は詐欺  退学又は停学\n麻薬、覚醒剤等の薬物犯罪（不正所持又は使用）  退学又は停学\n賭博  退学、停学又は訓告\n痴漢行為（のぞき見、盗撮行為等を含む。）、わいせつ行為\n（公然わいせつ、わいせつ物頒布等をいう。）又はストー\nカー行為  退学、停学又は訓告\nコンピュータ又はネットワークの不正使用で悪質な場合  退学又は停学\nコンピュータ又はネットワークの不正又は不適切な使用  停学又は訓告\n交通法規\nに違反す\nる行為\n無免許運転、飲酒運転（幇\nほう助を含む。）、暴走運転等悪質な\n交通法規違反により相手を死亡させ、又は高度後遺障害等\nを負わせる人身事故を起こした場合  退学\n無免許運転、飲酒運転（幇\nほう助を含む。）、暴走運転等悪質な\n交通法規違反により人身事故(前項に規定する事故を除\nく。)を起こした場合\n退学又は停学\n無免許運転、飲酒運転（幇\nほう助を含む。）、暴走運転等の交通\n法規違反  退学、停学又は訓告\n論文等の\n不正行為  論文等の盗用又は 剽\nひょう\n窃（※）（研究成果作成の際に論文や\nデータのねつ造を行った場合を含む。以下同じ。）  退学、停学又は訓告\n授業に関\nする不正\n行為\n試験において、\n・身代わり受験を行った場合又は行わせた場合\n・特に悪質な不正行為を行った場合又は行わせた場合  退学又は停学\n試験において、\n・許可されていないノート、参考書等を参照した場合\n・試験時間中に、使用を許可されていない機器等を\n使用した場合\n・答案を交換した場合\n・他の学生の答案をのぞき見した場合\n・不正行為を幇\nほう助した場合\n・監督者の注意又は指示に従わなかった場合\n・その他、試験において不正行為を行った場合\n授業の出席確認において、欺く行為を行った場合\nレポート等の課題において盗用又は 剽\nひょう\n窃を行った場合\n停学又は訓告\n人権を侵\n害する行 セクシュアル・ハラスメント行為、アカデミック・ハラス\nメント行為、パワー・ハラスメント行為  退学、停学又は訓告\n為\nその他\n本学の知的財産を故意に喪失させる行為  退学又は停学\n本学の管理する建造物への不法侵入又はその不正使用若\nしくは占拠  退学、停学又は訓告\n本学の構成員に対する暴力行為、威嚇、拘禁、拘束等  退学、停学又は訓告\n本学の教育研究又は管理運営を著しく妨げる暴力的行為  退学、停学又は訓告\n本学が管理する建造物又は器物の損壊、汚損、失火（結果\nが重大なものに限る。）等  停学又は訓告\n二十歳未満の者に対する飲酒又は喫煙を強制又は助長す\nる行為  停学又は訓告\nその他、本学の信用を著しく失墜させる行為  退学、停学又は訓告\n※  表中の「盗用」とは、他人の作成した内容を書き写す又は氏名を書き換える等の行為\nをいい、「 剽\nひょう\n窃」とは、他人の著作物の内容等について出典を明記せず、自己の主張・\n考えとして表現する等の行為をいう。",
      "references_tables": []
    }
  ],
  "appended_tables": []
}
